--- a/src/globals/winamp_theme.scss
+++ b/src/globals/winamp_theme.scss
@@ -30,7 +30,8 @@ $line: (
   }
 
   figcaption {
-    padding: 2px 6px;
+    font-size: 12px;
+    padding: 1px 3px;
     text-align: left;
     display: inline;
     vertical-align: middle;
